--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "expo": {
     "name": "TecNM Istmo",
     "slug": "tecnm-istmo",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
-    "icon": "src/assets/images/logo-iti-ios.png",
+    "icon": "src/assets/images/icon-app.png",
     "splash": {
       "image": "src/assets/images/splash.png",
       "resizeMode": "contain",
@@ -16,7 +16,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "mx.tecnm.istmo.idcard",
-      "buildNumber": "1.0.0",
+      "buildNumber": "1.0.2",
       "supportsTablet": false,
       "infoPlist": {
         "NSCameraUsageDescription": "Se accederá a tu Cámara para tomar tu fotografía que será usada en tu Credencial Digital",
@@ -25,10 +25,10 @@
     },
     "android": {
       "package": "mx.tecnm.istmo.idcard",
-      "versionCode": 1,
+      "versionCode": 3,
       "adaptiveIcon": {
-        "foregroundImage": "src/assets/images/icono.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "src/assets/images/icon-app.png",
+        "backgroundColor": "#1b396a"
       },
       "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"]
     },
